# Power-BI-Extract

./: AkashRamanandRajak_EMPN0357.pbit  AkashRamanandRajak_EMPN0357.pbix  Details.xls  HowToRun.docx  Manual Documentation Format.docx  Project.py  README.docx  README.md  learn.py
Files/: CustomReport.pbit  Self Serve Dataset.pbit  (+2 more)
PyPbitAutomator Package/: README.md  pyproject.toml
PyPbitAutomator Package/src/PyPbitAutomator/: Extractor.py
PyPbitAutomator Package/src/PyPbitAutomator/temp/: Connections  DataModelSchema  DiagramLayout  Metadata  Settings  [Content_Types].xml
PyPbitAutomator Package/src/PyPbitAutomator/temp/Report/: Layout
PyPbitAutomator Package/src/PyPbitAutomator/temp/Report/CustomVisuals/checkA270BECA89BC40ED92C37CA5D60F3469/: package.json
PyPbitAutomator Package/src/PyPbitAutomator/temporary/: Connections  DataModelSchema  DiagramLayout  Metadata  SecurityBindings  Settings  [Content_Types].xml
PyPbitAutomator Package/src/PyPbitAutomator/temporary/Report/CustomVisuals/HierarchySlicer1458836712039/resources/: HierarchySlicer1458836712039.pbiviz.json
PyPbitAutomator Package/src/PyPbitAutomator/temporary/Report/CustomVisuals/MekkoChart1449744733038/: package.json
PyPbitAutomator Package/src/PyPbitAutomator/temporary/Report/CustomVisuals/MekkoChart1449744733038/resources/: MekkoChart1449744733038.pbiviz.json
PyPbitAutomator Package/src/PyPbitAutomator/temporary/Report/StaticResources/RegisteredResources/: OIP3094172059618361.jfif  Radio_OFF16512182830219135.jfif  Radio_ON5815879296784108.jfif
PyPbitAutomator Package/temp/: Connections  DataModelSchema  DiagramLayout  Metadata  SecurityBindings  [Content_Types].xml
PyPbitAutomator Package/temp/Report/: Layout
pbi_automate/: pyproject.toml
(+37 files in other folders)
